gl31-master/src/test/deca/syntax/invalid/complet/bad_cast4.deca
// Description:
//    tests de programme incorrect syntaxiquement pour complet
//
// Resultats:
//    Ligne 11 : Erreur, '(' manquant
//
// Historique:
//    cree le 24/01/2021
{
    int a;
    float f = (float)a);
}
